# resu-me

./: Cargo.toml  README.md  index.html  resume.html
css/: style.css
docs/: app-ads.txt  index.html  resume-5a3e913a3cf7d905.js  resume-5a3e913a3cf7d905_bg.wasm  resume-6e27809e6c0b1fb8.js  resume-6e27809e6c0b1fb8_bg.wasm  resume-71abfd96f0145e2d.js  resume-71abfd96f0145e2d_bg.wasm  resume-87b66a118d1fb38a_bg.wasm  resume-c9557f46338c6b76.js  resume-c9557f46338c6b76_bg.wasm  resume-daa081b77e8bb305.js  resume-daa081b77e8bb305_bg.wasm  resume-e166210e1cf6a2ba_bg.wasm
docs/snippets/resume-ddf72c9b9a1ac15c/js/: html2pdf.js
js/: script.js
src/: bindings.rs  lib.rs  main.rs
src/components/: mod.rs
src/components/atoms/: custom_input.rs  hello_world.rs  input.rs  mod.rs  range_input.rs  text_area.rs  text_input.rs
src/components/molecules/: mod.rs  side_bar.rs
src/components/molecules/css/: side_bar.css
src/components/molecules/multi_step_form/: button_container.rs  image_upload.rs  mod.rs  preloader.rs  progress_bar.rs  steps_container.rs
src/components/molecules/res1/: education.rs  footer.rs  header.rs  mod.rs  nav.rs  recent_work.rs  skill.rs  work.rs
src/components/organisms/: mod.rs  multi_step_form.rs  resume.rs  resume2.rs  resume3.rs  resume4.rs
src/components/organisms/css/: resume2.css  resume4.css  resume5.css  resume5.html  resume6.css  resume6.html  style.css
