[package]
name = "resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
gloo = "0.8.0"
gloo-file = "0.2.3"
js-sys = "0.3.60"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = { version = "0.13.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["css"] }
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.10.0"

[profile.release]
debug = 1
